# cody-jepa

./: .gitignore  README.md  cody-jepa-10-week-plan.md  dataset-handling.md  health-and-gait.md  pyproject.toml
haic-results/: job_91108.ipynb  single-stream-jepa-90881.executed.ipynb  single-stream-jepa-91023.executed.ipynb  split-sanity-check.md
notebooks/: 01-cody-jepa.ipynb  healthgait_manifest_loader.ipynb  linear-probe-results.ipynb  single-stream-jepa.ipynb
notes/: phase0-instructions.md  probe-instructions.md  single-stream-jepa-writeup.md  week2-instructions.md
protocols/: phase0-baseline.json
reports/: phase0-baseline.json  phase0-baseline.md  phase0-evidence-recovery-2026-07-23.md
scripts/: build_healthgait_manifest.py  eval_probes.py  export_single_stream_features.py  run_phase0_pipeline.py
slurm/: train-single-stream-jepa.sbatch
src/: dataset.py  healthgait.py
src/cody_jepa/: __init__.py  phase0.py  probes.py  single_stream_jepa.py
src/cody_jepa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_documentation_links.py  test_healthgait_dataset.py  test_healthgait_diagnostics.py  test_phase0.py  test_phase0_pipeline.py  test_probe_notebook.py  test_probes.py  test_single_stream_jepa.py  test_single_stream_notebook.py  test_uv_policy.py
tutorials/: cody-jepa-plan.md  haic-guide.md  health-and-gait.md  train-cody-jepa-on-haic.md  week2-00-haic-uv-slurm.md  week2-01-gaitlu-storage-extraction.md  week2-02-index-splits-loader.md  week2-03-diagnostics-probe-exports.md  week2-haic-gaitlu-index.md
tutorials/notebooks/: week2_00_haic_uv_slurm.ipynb  week2_01_gaitlu_storage_extraction.ipynb  week2_02_index_splits_loader.ipynb  week2_03_diagnostics_probe_exports.ipynb
tutorials/week2/: week2-02-index-splits-loader.md  week2-03-diagnostics-probe-exports.md  (+1 more)
(+5 files in other folders)
